--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Super Awesome Website</title>
+    <title>My Awesome Website</title>
   </head>
   <body>
     <h1>Hi! Welcome to my website!!!</h1>
