Revert "Initial commit"
This reverts commit 0cb5ca8eb9f84d1708980656e0a81234ff9e4428.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
     <p>Isn't it <strong>awesome</strong>?</p>
 
-    <p>I'm going to talk a lot about myself and my <em>favorite things!</em></p>
+    <p>This website includes some of my <em>favorite things!</em></p>
 
     <p><img src="joker.gif"></p>
 
     <p><a href="http://nytimes.com/crosswords/game/mini">First, take the mini crossword puzzle!</a></p>
 
-    <p><a href="tacos.html">Tacos!!!</a></p>
+    <p><a href="dog.html">Dog!!!</a></p>
 
     <p></p>
-    <p>Foods that are <strong>tasty:</strong></p>
+    <p>Foods that are <strong>delicious:</strong></p>
     <ul>
      <li>Tacos</li>
      <li>Pizza</li>
@@ -25,23 +25,23 @@
     </ul>
 
     <p></p>
-    <p>Countries that are cool:</p>
+    <p>Good restaurants:</p>
     <table>
      <tr>
-     <th>Country</th>
-     <th>Year Visited</th>
+     <th>Restaurant</th>
+     <th>City</th>
      </tr>
      <tr>
-     <td>Thailand</td>
-     <td>2017</td>
+     <td>Carbone</td>
+     <td>New York</td>
      </tr>
      <tr>
-     <td>Spain</td>
-     <td>2016</td>
+     <td>Carbone</td>
+     <td>New York</td>
      </tr>
      <tr>
-     <td>Norway</td>
-     <td>2015</td>
+     <td>Carbone</td>
+     <td>New York</td>
      </tr>
     </table>
 
