--- a/dog.html
+++ b/dog.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tacos!</title>
+    <title>Dog!</title>
   </head>
   <body>
     <p><img src="dog.jpeg"></p>
