--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <p>This website includes some of my <em>favorite things!</em></p>
 
-    <p><img src="joker.gif"></p>
+    <p><img src="http://i.imgur.com/30eEul4.gif"></p>
 
     <p><a href="http://nytimes.com/crosswords/game/mini">First, take the mini crossword puzzle!</a></p>
 
@@ -36,11 +36,11 @@
      <td>New York</td>
      </tr>
      <tr>
-     <td>Carbone</td>
+     <td>TBD</td>
      <td>New York</td>
      </tr>
      <tr>
-     <td>Carbone</td>
+     <td>TBD</td>
      <td>New York</td>
      </tr>
     </table>
