--- a/dog.html
+++ b/dog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Dog!</title>
   </head>
+  <p><img src="https://vetstreet.brightspotcdn.com/dims4/default/1d4a79d/2147483647/crop/0x0%2B0%2B0/resize/645x380/quality/90/?url=https%3A%2F%2Fvetstreet-brightspot.s3.amazonaws.com%2F92%2F94d720a7fc11e0a0d50050568d634f%2Ffile%2FSaint-bernard-3-645mk062811.jpg"></p>
   <body>
-    <p><img src="dog.jpeg"></p>
   </body>
 </html>
