--- a/index.html
+++ b/index.html
@@ -1,53 +1,74 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Awesome Website</title>
-  </head>
-  <body>
-    <h1>Hi! Welcome to my website!!!</h1>
+<html lang="en">
+ <head>
+ <title>Easy, Healthy Meals</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+ <link rel="stylesheet" href="styles.css">
+ </head>
+ <body>
 
-    <p>Isn't it <strong>awesome</strong>?</p>
+   <!-- Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+     <a class="navbar-brand" href="index.html">Easy, Healthy Meals</a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <ul class="navbar-nav mr-auto">
+         <li class="nav-item active">
+           <a class="nav-link" href="meal1.html">Oven <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item active">
+           <a class="nav-link" href="meal2.html">Skillet <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item active">
+           <a class="nav-link" href="meal3.html">Crock pot <span class="sr-only">(current)</span></a>
+         </li>
+       </ul>
+       <form class="form-inline my-2 my-lg-0">
+       </form>
+     </div>
+   </nav>
 
-    <p>This website includes some of my <em>favorite things!</em></p>
+      <!-- Jumbotron -->
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <img src="meal4.jpg">
+              <h1 class="display-4">Welcome!</h1>
+                <p class="lead">This site includes easy-to-cook, healthy meals</p>
+          </div>
+        </div>
 
-    <p><img src="http://i.imgur.com/30eEul4.gif"></p>
-
-    <p><a href="http://nytimes.com/crosswords/game/mini">First, take the mini crossword puzzle!</a></p>
-
-    <p><a href="dog.html">Dog!!!</a></p>
-
-    <p></p>
-    <p>Foods that are <strong>delicious:</strong></p>
-    <ul>
-     <li>Tacos</li>
-     <li>Pizza</li>
-     <li>Nachos</li>
-    </ul>
-
-    <p></p>
-    <p>Good restaurants:</p>
-    <table>
-     <tr>
-     <th>Restaurant</th>
-     <th>City</th>
-     </tr>
-     <tr>
-     <td>Carbone</td>
-     <td>New York</td>
-     </tr>
-     <tr>
-     <td>TBD</td>
-     <td>New York</td>
-     </tr>
-     <tr>
-     <td>TBD</td>
-     <td>New York</td>
-     </tr>
-    </table>
-
-    <p></p>
-    <p>Meme Hall of Fame:</p>
-
-    <p><img src="http://i0.kym-cdn.com/photos/images/original/000/582/573/60f.jpg"></p>
-  </body>
+      <!-- Grid -->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <h3>
+              <i class="far fa-thumbs-up"></i>
+              Includes favorite meals</h3>
+                <p3>
+                Meals are healthy and provide options based on kitchen appliances</p3>
+          </div>
+          <div class="col-sm">
+            <h3>
+              <i class="far fa-list-alt"></i>
+              Lists ingredients needed</h3>
+                <p3>
+                Ingredients and precise measurements are included</p3>
+          </div>
+          <div class="col-sm">
+            <h3>
+              <i class="far fa-check-circle"></i>
+              Provides all instructions</h3>
+                <p3>
+                Instructions are easy to follow and can be completed in 30 minutes</p3>
+          </div>
+</body>
 </html>
